<package format="2">
    <name>robot_control</name>
    <version>0.0.0</version>
    <description>The robot_control package</description>
  
    <maintainer email="user@example.com">Your Name</maintainer>
  
    <license>BSD</license>
  
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>rospy</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
  
    <export>
    </export>
  </package>
  